# affineui

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  PATCHES.md  README.md  build.ps1  build.sh
.claude/skills/fix-conformance-test/: SKILL.md
.github/workflows/: ci.yml
assets/fonts/: NOTICE.md
cmake/: BackendDetect.cmake  CompilerWarnings.cmake  Dependencies.cmake  affineuiConfig.cmake.in  bin2c.c
conformance/: diff.py  run.py
conformance/browser/: package-lock.json  package.json  shot.js
conformance/cases/bs_alerts/: index.html
conformance/cases/bs_badges/: index.html
conformance/cases/bs_breadcrumb/: index.html
conformance/cases/bs_button_outline/: case.json  index.html
conformance/cases/bs_buttons/: index.html
conformance/cases/bs_cards/: index.html
conformance/cases/bs_form_check/: index.html
conformance/cases/bs_forms_inputs/: index.html
conformance/cases/bs_grid/: index.html
conformance/cases/bs_list_group/: index.html
conformance/cases/bs_nav_tabs/: index.html
conformance/cases/bs_navbar/: index.html
conformance/cases/bs_pagination/: index.html
conformance/cases/bs_progress/: index.html
conformance/cases/bs_spinners/: index.html
conformance/cases/bs_tables/: index.html
conformance/cases/hello/: case.json  index.html
conformance/cases/hover_box/: case.json  index.html
conformance/cases/html_backgrounds/: index.html
conformance/cases/html_border_radius/: index.html
conformance/cases/html_borders/: index.html
conformance/cases/html_box_model/: index.html
conformance/cases/html_box_shadow/: index.html
conformance/cases/html_colors_opacity/: index.html
conformance/cases/html_display_none_visibility/: index.html
conformance/cases/html_flex_align/: index.html
conformance/cases/html_flex_justify/: index.html
conformance/cases/html_flex_wrap/: case.json  index.html
conformance/cases/html_font_weight_size/: case.json  index.html
conformance/cases/html_inline_block/: case.json  index.html
conformance/cases/html_lists/: index.html
conformance/cases/html_overflow/: case.json  index.html
conformance/cases/html_padding_margin/: index.html
conformance/cases/html_position/: index.html
conformance/cases/html_table_basic/: index.html
conformance/cases/html_text_align/: index.html
conformance/cases/html_text_basic/: index.html
conformance/cases/html_text_decoration/: index.html
conformance/cases/text_line/: case.json  index.html
docs/: ARCHITECTURE.md  BUILDING.md  CONFORMANCE.md  CONTRIBUTING.md  DESIGN.md  EMBEDDING.md  EMBEDDING_DESIGN.md  OPTIMIZATION.md  ROADMAP.md
examples/: CMakeLists.txt
examples/00_hello/: CMakeLists.txt  main.cpp
examples/01_bootstrap/: CMakeLists.txt  main.cpp  reference.html
examples/02_hello_sdl/: CMakeLists.txt  main.cpp
examples/03_media/: CMakeLists.txt  main.cpp  reference.html
examples/04_imm_counter/: CMakeLists.txt  main.cpp
examples/05_imm_todo/: CMakeLists.txt  main.cpp  reference.html
examples/06_text_flow/: CMakeLists.txt  main.cpp  reference.html
examples/07_forms_focus/: CMakeLists.txt  main.cpp  reference.html
examples/08_bootstrap_kitchen/: CMakeLists.txt  main.cpp  reference.html
examples/09_embed_d3d11/: CMakeLists.txt  main.cpp
examples/frameworks/: SOURCES.md
include/affineui/: affineui.h  app.h  c_api.h  computed_style.h  display_list.h  document.h  embed.h  geom.h  imm.h  painter.h  renderer.h  sdl.h  sokol.h  style.h  themes.h  types.h  ui.h  version.h
patches/: README.md  lexbor-html-event-destroy-null-list.patch  lexbor-selector-pseudo-specificity.patch
scripts/: fetch_deps.sh  sync_lexbor_from_fork.sh  sync_nanovg_from_fork.sh
source/lexbor/css/: property.c
source/lexbor/css/property/: const.h  res.h  state.c
src/: affineui.cpp  c_api.cpp  themes.cpp  ui.cpp
src/app/: app.cpp  event.cpp
src/dom/: document.cpp  dom_view.cpp  lexbor_bridge.cpp
src/engine/: animation.cpp  animation.h  box.cpp  box.h  compositor.cpp  compositor.h  display_list.cpp  engine.cpp  engine.h  layer.cpp  layer.h  layout_engine.cpp  layout_engine.h  paint_engine.cpp  paint_engine.h  rasterizer.cpp  rasterizer.h  restyle_queue.cpp  restyle_queue.h  style_engine.cpp  style_engine.h
src/imm/: imm.cpp  imm_runtime.cpp  imm_runtime.h  reconciler.cpp  state_store.cpp
src/internal/: animated_style.h  compositor.h  computed_style.h  display_list.h  display_list_painter.h  element_id.h  embed_log.h  layer.h  paint_internal.h  style_resolver.h  style_store.h
src/layout/: block.cpp  box.cpp  flex.cpp  inline.cpp  yoga_adapter.cpp  yoga_adapter.h
src/paint/: composite.cpp  image_loader.cpp  layer.cpp  nanovg_impl.c  nanovg_painter.cpp  nanovg_sokol.c  paint_driver.cpp  sokol_impl.c
src/render/: renderer.cpp
src/style/: cascade.cpp  computed.cpp  selector_bridge.cpp  style_store.cpp  units.cpp
src/text/: font_manager.cpp  fontstash_impl.c  line_breaker.cpp  shaper.cpp  stb_impl.c
test/files/lexbor/css/declarations/: background_border_gap.ton
tests/: CMakeLists.txt  test_bootstrap.cpp  test_cascade.cpp  test_document.cpp  test_imm_callsite.cpp  test_imm_runtime.cpp  test_layout.cpp  test_version.cpp
tools/: CMakeLists.txt  amalgamate.py  lexbor_cpp_compat.py
tools/conformance/: CMakeLists.txt  json.h  main.cpp
